--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-pytz
-PySide6
-pyqtgraph
-yfinance
+numpy >= 1.22.2
+pandas >= 1.4.1
+pytz >= 2021.3
+PySide6 >= 6.2.3
+pyqtgraph >= 0.12.3
+yfinance >= 0.1.70
